--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -b",
-    "start": "nodemon dist/index.js",
-    "dev": "npm run build && npm run start"
+    "build": "tsc",
+    "start": "node dist/index.js",
+   "dev": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +31,7 @@
     "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/ws": "^8.18.1",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "ts-node": "^10.9.2"
   }
 }
